--- a/package/gluon-status-page/files/lib/gluon/status-page/view/status-page.html
+++ b/package/gluon-status-page/files/lib/gluon/status-page/view/status-page.html
@@ -101,7 +101,7 @@
 				<dl>
 					<dt><%:Node name%></dt><dd><%| nodeinfo.hostname %></dd>
 					<% if nodeinfo.owner and nodeinfo.owner.contact then -%>
-						<dt><%:Contact%></dt><dd>&nbsp;<!-- <%| nodeinfo.owner.contact %> --></dd>
+						<dt><%:Contact%></dt><dd> <!-- <%| nodeinfo.owner.contact %> --></dd>
 					<%- end %>
 					<dt><%:Model%></dt><dd><%| nodeinfo.hardware.model %></dd>
 					<dt><%:Primary MAC address%></dt><dd><%| nodeinfo.network.mac %></dd>
